ajout du batch similarity
